# starknet-libs

./: .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  hardhat.config.ts  hash_sign_message.ts  main.ts  package.json  requirements.txt  sekai_string.test.ts  setup.cfg  test.py  test.ts  tsconfig.json
cairo_string/: String.cairo
cairolib/token/: ERC721_base.cairo
contracts/: Account.cairo  Ownable_base.cairo  String_Examples.cairo  Strings.cairo  Strings_old.cairo
contracts/cairo/: Account.cairo  Strings.cairo
contracts/cairo/token/: ERC721.cairo
contracts/solidity/: Cards.sol
contracts/token/: Cards.cairo  ERC721.cairo  ERC721_URI.cairo  ERC721_base.cairo
examples/: String_Examples.cairo
lib/: signer.ts  utils.ts
lib/cairo/: Ownable_base.cairo  String.cairo
lib/cairo/token/: ERC721_Metadata.cairo  ERC721_base.cairo
lib/starknet-ts/: signer.ts  starknet.utils.ts  test.utils.ts  utils.ts
old_lib/: account.test.bak2  signer.bak2
old_lib/starknet/: account.ts  constant_points.ts  index.ts  signature.ts  types.ts
src/sekai_libs/: __init__.py
src/sekai_libs/math/: array.cairo
src/sekai_libs/string/: constants.cairo  manipulation.cairo  store.cairo
src/sekai_libs/tests/: utils.py
starknet-artifacts/contracts/Account.cairo/: Account.json
test/: account.test.ts  addressRegistry.test.ts  cairo_string.test.ts  cards.test.ts  config.ts  erc20.test.ts  erc721.test.ts  mocha.d.ts  signer.ts  strings.test.ts  utils.ts
tests/: conftest.py  pytest.ini
tests/utils/: Signer.py
utils/: cairo_string.utils.ts  index.ts  test.utils.ts
(+11 files in other folders)
