[metadata]
name = sekai-starknet-libraries
version = attr: sekai-starknet-libraries.__version__
description = Cairo Libraries for use in StarkNet
author = Sekai
author_email = maintainers@sekai.gg
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sekai-studio/starknet-libs
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests
    examples

[options.package_data]
sekai_libs = "*.cairo"

[options.extras_require]
testing =
    setuptools
    build
    pytest
